--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -16,14 +16,14 @@
 }
 
 .calendarContainer .mainCalContainer{
-  width: 82.5%;
+  width: 85%;
   position: relative;
   padding: 0;
   /* background-color: blue; */
 }
 .calendarContainer .miniCalContainer {
   position:relative;
-  width: 17.5%;
+  width: 15%;
   background-color: green;
 }
 .weekCalendar {
@@ -38,7 +38,7 @@
 .topHeaderCal{
   display: flex;
   flex-direction: row;
-  background-color: red;
+  /* background-color: red; */
   width: 100%;
 }
 
@@ -99,10 +99,7 @@
   flex-basis: 0;
   max-width: 100%;
   font-size: 10px;
-  /* border-right: 1px solid ; */
-  /* background-color: red; */
-  /* border-left: 2px solid; */
-  /* border-color: darkgrey; */
+
 }
 
 .weekCalendar .weekDays .weekcol:first {
@@ -114,24 +111,99 @@
 .scrollCalContent{
   overflow:hidden;
   width: 100%;
-  height: 480px;
-  background-color: red;
+  height: 470px;
+  /* background-color: red; */
 }
 
 .scrollCalContent .weekDayFlex-Container{
   display: flex;
   overflow: auto;
-  background-color: red;
+  /* background-color: red; */
   /* overflow-y: hidden; */
   width: 101%;
-  height: 480px;
+  height: 470px;
   border-top: 2px solid;
   border-color: darkgrey;
 }
 
+.scrollCalContent .weekDayFlex-Container .timecol{
+  width: 50px;
+  float: left;
+  position:relative;
+  top: 40px;
+  background-color: red;
+}
 
+.scrollCalContent .weekDayFlex-Container .calendar{
+  display: block;
+  position: relative;
+  width: 95%;
+  /* background-color: red; */
+  /* border: 1px solid var(--border-color); */
+}
 
+.scrollCalContent .weekDayFlex-Container .calendar .scrollBody{
+  width: 100%;
+  height: 1200px;
+  background-color: white;
+}
 
+/* This is for weekcalendar specficially */
+.backWeekBody{
+  margin: 0;
+  padding: 0;
+  column-count: 7;
+  column-gap: 0.5%;
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  /* background-color: blue; */
+}
+.backWeekBody .backWeekCol {
+  flex-grow: 0;
+  /* background-color: red; */
+  flex-basis: calc(100%/7);
+}
+
+.backWeekBody .hourcellT{
+  position: relative;
+  height: 25px;
+  border-left: 1px solid #d9d9d9;
+  /* border-bottom: 1px solid var(--border-color); */
+  overflow: hidden;
+  cursor: pointer;
+  /* background: var(--neutral-color); */
+  /* background: red; */
+  transition: 0.25s ease-out;
+  z-index: 1;
+}
+.backWeekBody .hourcellB{
+  position: relative;
+  height: 25px;
+  border-left: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+  overflow: hidden;
+  cursor: pointer;
+  /* background: var(--neutral-color); */
+  /* background: red; */
+  transition: 0.25s ease-out;
+  z-index: 1;
+}
+
+.weekBody{
+  display: grid;
+  /* border-bottom: 1px solid var(--border-color); */
+  /* grid-auto-flow: dense; */
+  grid-template-columns: repeat(7, 14%);
+  grid-template-rows: repeat(48, 22.1px);
+  background-color: red;
+  grid-column-gap: 0.45%;
+  grid-row-gap: 3px;
+  position:relative;
+  top: -1202px;
+
+}
 
 
 
@@ -395,24 +467,7 @@ controls all colors and font weight */
   /* background-color: orange; */
 }
 
-/* This is for the time side bar for the weekCalendar */
-.weekDayFlex-Container .timecol{
-  width: 50px;
-  float: left;
-  position:relative;
-  top: 40px;
-  /* background-color: red; */
 
-}
-
-.dayFlex-Container .timecol{
-  width: 50px;
-  float: left;
-  position:relative;
-  top: 50px;
-  /* background-color: red; */
-
-}
 
 /* This is for the side bars tabs in the PersonalCalendar */
 .flex-container .sidecol .sideBar{
@@ -462,6 +517,7 @@ controls all colors and font weight */
   grid-template-rows: repeat(48, 24px);
   grid-row-gap: 1px;
   top: -1200px;
+  /* display: none; */
   /* background-color: red; */
 }
 
@@ -548,18 +604,6 @@ controls all colors and font weight */
 .flex-container .calendar{
   width: 1455px;
   /* background-color: blue; */
-}
-
-
-.calendar {
-
-  display: block;
-  position: relative;
-  width: 100%;
-  height: 154%;
-  /* background-color: red; */
-  background: var(--neutral-color);
-  /* border: 1px solid var(--border-color); */
 }
 
 
@@ -776,14 +820,6 @@ controls all colors and font weight */
   /* background-color: orange; */
 }
 
-.calendar .scrollBody {
-  height: 1000px;
-  margin-bottom: 0px;
-  /* width: 1306px; */
-  /* vertical-align: top; */
-  /* background-color: red; */
-}
-
 .weekEvent .pointerEvent{
     pointer-events: none;
 }
@@ -994,9 +1030,7 @@ controls all colors and font weight */
 
 
 
-.rightMini{
-  margin-left: -200px;
-}
+
 /* This is to control the year view */
 .calendar .body .yearcol {
   flex-grow: 0;
@@ -1090,43 +1124,6 @@ controls all colors and font weight */
 
 
 
-/* This is for the week view and to control the cell size */
-.calendar .scrollBody .backWeekBody .hourcellT {
-  position: relative;
-  height: 25px;
-  border-left: 1px solid var(--border-color);
-  /* border-bottom: 1px solid var(--border-color); */
-  overflow: hidden;
-  cursor: pointer;
-  background: var(--neutral-color);
-  /* background: red; */
-  transition: 0.25s ease-out;
-  z-index: 1;
-}
-
-.calendar .scrollBody .backWeekBody .hourcellB {
-  position: relative;
-
-  height: 25px;
-  border-left: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-  overflow: hidden;
-  cursor: pointer;
-  background: var(--neutral-color);
-  /* background: red; */
-  transition: 0.25s ease-out;
-  z-index: 1;
-}
-
-.calendar .scrollBody .backWeekBody .weekFlexRow{
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction:row;
-  flex-wrap: wrap;
-  width: 100%;
-  /* background-color: blue; */
-}
 
 /* this is to hel format the list in each cell in the weekview */
 .calendar .body .hourcell .monthList {
@@ -1249,19 +1246,6 @@ to make it adjustable */
 
 
 
-.weekDayFlex-Container .calendar .weekBody{
-  display: grid;
-  border-bottom: 1px solid var(--border-color);
-  /* grid-auto-flow: dense; */
-  grid-template-columns: repeat(7, 195px);
-  grid-template-rows: repeat(48, 22.1px);
-  /* background-color: red; */
-  grid-column-gap: 1px;
-  grid-row-gap: 3px;
-  position:relative;
-  top: -1202px;
-
-}
 
 .calendar .weekBorder {
   background-color: white;
@@ -1335,9 +1319,6 @@ to make it adjustable */
 }
 
 
-.calendar .weekBody .weekRow .testNumber {
-
-}
 
 .calendar .body .daycell .number {
   position: absolute;
@@ -1412,30 +1393,6 @@ to make it adjustable */
   transition: .5s ease-in;
 }
 
-
-/* width per cell */
-.calendar .scrollBody .backWeekBody {
-  margin: 0;
-  padding: 0;
-  column-count: 7;
-  /* column-gap: 50px; */
-  /* display: flex;
-  flex-direction: column;
-  flex-wrap: wrap; */
-  width: 1355px;
-  /* background-color: blue; */
-
-}
-
-.calendar .scrollBody .backWeekBody .col {
-  flex-grow: 0;
-  flex-basis: calc(100%/7);
-  /* background-color: red; */
-  /* flex-direction: column; */
-  /* flex-wrap: wrap; */
-  /* flex-direction: column; */
-  /* width: calc(100%/7); */
-}
 
 .calendar .body .weekcol {
   flex-grow: 0;
