--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -153,7 +153,7 @@
   margin: 0;
   padding: 0;
   column-count: 7;
-  column-gap: 0.5%;
+  column-gap: 0.35%;
   /* display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -195,14 +195,15 @@
   display: grid;
   /* border-bottom: 1px solid var(--border-color); */
   /* grid-auto-flow: dense; */
-  grid-template-columns: repeat(7, 14%);
+  width: 100%;
+  grid-template-columns: repeat(7, 14.2%);
   grid-template-rows: repeat(48, 22.1px);
   background-color: red;
-  grid-column-gap: 0.45%;
+  grid-column-gap: 0.1%;
   grid-row-gap: 3px;
-  position:relative;
-  top: -1202px;
-
+  position:absolute;
+  top: 0;
+  left: 0;
 }
 
 
@@ -769,7 +770,7 @@ controls all colors and font weight */
   /* this makes events rounded but gonna take it out for now */
   border-radius: 5px;
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.12), 2px 3px 4px rgba(0, 0, 0, 0.24);
-  width:95%;
+  width:100%;
   height: 100%;
   /* grid-column: 1/7; */
   z-index: 1;
