--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -1,6 +1,6 @@
 /* These are for the NewChat.js */
 .chatContainer {
-  background-color: blue;
+  /* background-color: blue; */
 
   position: relative;
   height: 93vh;
