--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -1,40 +1,30 @@
 /* Holds all the calendars */
 /* Stuff under here are shared among all the calendars */
-
 .calendarContainer{
   position: relative;
-  /* left: 3%; */
   width: 96vw;
   height: 93vh;
   top:7%;
-  /* color:black; */
-  /* bottom: 0px; */
-  /* background-color: red; */
   display: flex;
   flex-direction: row;
   font-family: "Segoe UI Regular";
 }
 
 .calendarContainer .mainCalContainer{
-  width: 85%;
+  width: 82.5%;
   position: relative;
   padding: 0;
-  background-color: blue;
 }
 
 .weekCalendar {
   position: relative;
   width: 100%;
   left: 0%;
-  /* background: var(--neutral-color); */
-  /* border: 1px solid var(--border-color); */
-  /* background-color: black; */
 }
 
 .topHeaderCal{
   display: flex;
   flex-direction: row;
-  /* background-color: red; */
   width: 100%;
 }
 
@@ -42,17 +32,34 @@
   text-transform: uppercase;
   font-weight: 800;
   font-size: 16px;
-  /* padding: 1% 1%; */
-  /* height: 100%; */
-  /* border-bottom: 1px solid var(--border-color); */
-  /* to the right of this is day/week dropdown */
   position: relative;
-  left: 50%;
+  left: 51.5%;
   transform: translateX(-50%);
-  /* background-color: orange; */
   width: 45%;
   justify-content: center;
   text-align: center;
+  /* background-color: red; */
+  display: flex;
+  flex-direction: row;
+}
+
+.weekCalendar .header .arrowLeft{
+  /* background-color: red; */
+  position: absolute;
+
+  width: 10%;
+  left: 0;
+}
+
+.weekCalendar .header .midText{
+  position: relative;
+}
+
+.weekCalendar .header .arrowRight{
+  /* background-color: blue; */
+  position: absolute;
+  right: 0;
+  width: 10%;
 }
 
 @media screen and (max-width:1000px){
@@ -66,12 +73,53 @@
 
 .calendarDropDownCSS{
   position: relative;
-  left:35%;
+  left:40%;
   padding-top: 10px;
   padding-bottom: 3px;
-  /* background-color: green; */
   font-size: 14px;
 }
+
+.calendarContainer .miniCalContainer {
+  position:relative;
+  width: 17.5%;
+  /* background-color: green; */
+}
+
+.miniCalContainer .weekCreateEvent {
+  /* background-color: red; */
+  position: relative;
+  top: 50px;
+  width: 80%;
+  font-size: 14px;
+  margin-bottom: 50px;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  left:50%;
+  transform: translateX(-50%);
+}
+
+.miniCalContainer .miniEventSyncButton {
+  /* background-color: red; */
+  position: relative;
+  top: 75px;
+  width: 80%;
+  font-size: 14px;
+  margin-bottom: 50px;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  left:50%;
+  transform: translateX(-50%);
+}
+
+
+.miniCalContainer .miniCalendar {
+  /* background-color: red; */
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  top: 10px;
+  /* color: white; */
+}
+
 
 
 
@@ -83,7 +131,7 @@
 .weekCalendar .weekDays {
   font-weight: 100;
   font-size: 100%;
-  width: 95.7%;
+  width: 96.9%;
   display: flex;
   flex-direction: row;
   /* background-color: red; */
@@ -110,7 +158,7 @@
 .scrollCalContent{
   overflow:hidden;
   width: 100%;
-  height: 470px;
+  height: 450px;
   /* background-color: red; */
 }
 
@@ -120,7 +168,7 @@
   /* background-color: red; */
   /* overflow-y: hidden; */
   width: 101%;
-  height: 460px;
+  height: 445px;
   border-top: 2px solid;
   border-color: darkgrey;
 }
@@ -137,7 +185,7 @@
 .scrollCalContent .weekDayFlex-Container .calendar{
   display: block;
   position: relative;
-  width: 95%;
+  width: 96.7%;
   /* background-color: red; */
   /* border: 1px solid var(--border-color); */
 }
@@ -164,7 +212,7 @@
 }
 
 .sideTime .cell .number{
-  font-size: 75.5%;
+  font-size: 73.5%;
   line-height: 1;
   font-weight: 10;
   position: relative;
@@ -233,10 +281,53 @@
 }
 
 
+/* This is for day calendar specifically */
+.backDayBody{
+
+}
 
 
 
+/* This is for the day view */
+.backDayBody .dayCellT {
+  position: relative;
+  /* background-color: red; */
+  height: 23px;
+  border-left: 1px solid var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+  /* background: var(--neutral-color); */
+  /* background-color: red; */
+  transition: 0.25s ease-out;
+  z-index: 1;
+}
 
+.backDayBody .dayCellB {
+  position: relative;
+  /* background-color: red; */
+  height: 23px;
+  /* border-top: 1px solid var(--border-color); */
+  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid #d9d9d9;
+  overflow: hidden;
+  cursor: pointer;
+  /* background: var(--neutral-color); */
+  transition: 0.25s ease-out;
+  z-index: 1;
+}
+
+.dayBody {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(48, 20.3px);
+  grid-row-gap: 2.8px;
+  position:absolute;
+  top: 0;
+  left: 0;
+  /* background-color: red; */
+}
 
 
 
@@ -529,15 +620,7 @@ controls all colors and font weight */
 
 
 
-.calendar .dayBody {
-  position: relative;
-  display: grid;
-  grid-template-rows: repeat(48, 24px);
-  grid-row-gap: 1px;
-  top: -1200px;
-  /* display: none; */
-  /* background-color: red; */
-}
+
 
 .calendar .dayBody .eventsDay{
   /* background-color: red; */
@@ -834,45 +917,9 @@ controls all colors and font weight */
   transform-origin: bottom;
 }
 
-.calendarContainer .miniCalContainer {
-  position:relative;
-  width: 15%;
-  right:1%;
-  /* background-color: green; */
-}
 
-.miniCalContainer .miniCalendar {
-  /* background-color: red; */
-  /* width: 1000px; */
-  /* height: 100px; */
 
-  position: relative;
-  top: 50px;
-  /* height: 300px; */
 
-  width: 200px;
-  /* color: white; */
-}
-
-.miniCalContainer .weekCreateEvent {
-  /* background-color: red; */
-  position: relative;
-  top: 50px;
-  width: 175px;
-  font-size: 14px;
-  margin-bottom: 50px;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-}
-
-.miniCalContainer .miniEventSyncButton {
-  /* background-color: red; */
-  position: relative;
-  top: 75px;
-  width: 175px;
-  font-size: 14px;
-  margin-bottom: 50px;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-}
 
 
 
@@ -906,7 +953,7 @@ controls all colors and font weight */
 
 .miniCalContainer .miniCalendar .days{
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 13px;
   padding: .75em 0;
   border-bottom: 1px solid var(--border-color);
   display: flex;
@@ -944,7 +991,7 @@ controls all colors and font weight */
 }
 
 .miniCalContainer .miniCalendar .miniCol .icon:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 
 
@@ -1099,34 +1146,6 @@ controls all colors and font weight */
   text-align: center;
 }
 
-/* This is for the day view */
-.calendar .backDayBody .dayCellT {
-  position: relative;
-  /* background-color: red; */
-  height: 25px;
-  border-top: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
-  overflow: hidden;
-  cursor: pointer;
-  background: var(--neutral-color);
-  /* background-color: red; */
-  transition: 0.25s ease-out;
-  z-index: 1;
-}
-
-.calendar .backDayBody .dayCellB {
-  position: relative;
-  /* background-color: red; */
-  height: 25px;
-  /* border-top: 1px solid var(--border-color); */
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  overflow: hidden;
-  cursor: pointer;
-  background: var(--neutral-color);
-  transition: 0.25s ease-out;
-  z-index: 1;
-}
 
 .calendar .body .daycell .uppertab {
   position: relative;
