--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -614,7 +614,7 @@ controls all colors and font weight */
 
 
 .calendar .body {
-  background-color: white;
+  background-color: blue;
   width: 1315px;
 }
 
@@ -1196,7 +1196,7 @@ to make it adjustable */
   grid-column-gap: 1px;
   border-bottom: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
-  /* background-color: red; */
+  background-color: red;
 }
 
 .calendar .body .yearRow {
