--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -2,16 +2,80 @@
 
 
 
+.eventPageContainer{
+  background-color: white;
+  width: 96vw;
+  /* padding: 30px; */
+  height: 100%;
+  font-family: 'Segoe UI Regular';
+  display: flex;
+  flex-direction: row;
+  /* overflow: hidden; */
+}
+
+
 /* CSS for the eventInfo side of the event page */
 .eventInfoContainer{
-  position: relative;
-  width: 80%;
-  height: 100%;
-  overflow: auto;
+  width:70%;
+  position:relative;
   background: green;
   /* align-items: center; */
 }
 
+
+
+
+
+.eventTopEntire{
+  width: 100%;
+  /* padding: 30px; */
+  height: 100%;
+  font-family: 'Segoe UI Regular';
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+
+}
+
+
+.topSectContainierRight{
+  width:40%;
+  position: relative;
+}
+
+/* image padding */
+ .topSectContainier{
+  background-color: #f5f5f5;
+  padding-left: 20px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  display: flex;
+}
+
+
+
+.innerLeftEvent{
+  position:relative;
+  width:40%;
+  background-color: pink;
+}
+
+.innerRightEvent{
+  position:relative;
+  width:40%;
+  background-color: brown;
+}
+
+
+
+
+.eventGroupChatContainer{
+  top:10%;
+  width:30%;
+  height:100vh;
+  position:relative;
+  background: red;
+}
 /* adjust height of scrollable */
 .eventInfoContainer .eventInfoView{
 
@@ -25,21 +89,6 @@
 
 
 
-
-
-.eventPageContainer{
-  background-color: white;
-  display: flex;
-  width: 100vw;
-  /* padding: 30px; */
-
-  height: 91.5vh;
-  position: absolute;
-  left: 50%;
-  /* bottom: 5px; */
-  transform: translateX(-48%);
-  font-family: 'Segoe UI Regular';
-}
 
 
 
@@ -106,11 +155,11 @@
 .mapEventCard{
   position: relative;
   overflow: hidden;
-  width:450px;
-  height:450px;
+  width:100%;
+  height:400px;
   float:right;
-  padding:40px;
-  margin-right: 50px;
+  padding:30px;
+  margin-right: 25px;
   margin-bottom: 100px;
   padding-bottom: 175px;
   background: white;
@@ -137,11 +186,19 @@
     /* background: red; */
 }
 
-.outerContainer{
-  margin-bottom: 10px;
 
-  /* background-color: red; */
+.eventLeftContainer{
+  position:relative;
+  width:100%;
+  height:100%;
+  left:20%;
+  display:flex;
+  flex-direction: row;
+  background:blue;
 }
+
+
+
 
 
 .innerContainer{
@@ -199,25 +256,17 @@
 
 
 
-/* image padding */
-.eventInfoContainer .eventInfoView .topSectContainier{
-  background-color: #f5f5f5;
-  padding-left: 20px;
-  padding-top: 30px;
-  padding-bottom: 10px;
-  display: flex;
-}
 
 
 
-.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
+.eventTopSide{
 
 
   padding: 50px;
   /* background-color: red; */
 }
 
-.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTitle{
+ .eventTitle{
   color: black;
   font-size: 28px;
   line-height: 120%;
@@ -239,64 +288,66 @@
   bottom:-10px;
   /* background-color: red; */
 }
-.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventDate{
+.eventDate{
   color: black;
   font-size: 20px;
   margin-top: 15px;
   /* background-color: red; */
 }
-.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventHost{
+.eventHost{
   /* color: black; */
   margin-top: 20px;
 }
 
-.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .invitedNum{
+.invitedNum{
   /* color: black; */
   margin-top: 20px;
   font-size: 18px;
 }
 
 
-.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
+.eventBackgroundPic{
   /* background-color: red; */
-  width: 65%;
+  width: 60%;
   height: 350px;
   border: 10px dashed gainsboro;
   text-align: center;
-  margin-left: 300px;
+  left:20%;]
+  position: relative;
   border-radius: 10px;
 }
 
 
 
 
-.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic{
-  /* background-color: red; */
-
-
+.eventBackgroundWPic{
+  background-color: red;
+  width: 60%;
+  position: relative;
+  left:30%;
+  height: 350px;
   overflow: hidden;
   /* border: 10px dashed gainsboro; */
-  margin-left: 275px;
+
 
 }
 
-.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic img{
+.eventBackgroundWPic img{
   /* background-color: red; */
 
   object-fit: cover;
-  width: 450px;
+  position:relative;
+  width:100%;
   height: 350px;
   background-color: #F5F5F5;
   border-radius: 20px;
 }
 
-
-
-
-
-.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
+.eventBackgroundPic .pictureFrame{
+  width: 60%;
   position: relative;
-  top: 28%;
+  left:30%;
+  height: 350px;
   font-size: 55px;
   color: gainsboro;
 
@@ -331,7 +382,6 @@
   font-size: 30px;
 }
 .eventInfoContainer .eventInfoView .eventInfo .aboutEvent{
-  font-size: 30px;
   color: black;
   margin-bottom: 30px;
 }
@@ -445,8 +495,9 @@
 
 
 .chatBox{
-  margin-left: 25px;
-  margin-bottom: 100px;
+  height:100%;
+  position: relative;
+
 
   line-height: 100%;
 }
