--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -59,7 +59,7 @@
 
 /* This is for the add chats feature */
 .chatContainer .chatRightSide .addNewChatContainer{
-  /* background-color: red; */
+  background-color: red;
   position:relative;
   width: 100%;
   height: 100%;
